# breath_pattern_modeling_and_classification

./: .gitignore  README.md  main.ipynb  main.py  requirements.txt  setup.cfg
src/breath_modeling/core/: channel.py  receiver.py  transmitter.py
src/breath_modeling/core/models/bilstm/: config.json  label_encoder.pkl  training_logs.pkl
src/breath_modeling/core/models/cnn/: config.json  label_encoder.pkl  training_logs.pkl
src/breath_modeling/core/models/rf/: random_forest.joblib  random_forest_v1.joblib
src/breath_modeling/model/: architecture.py  config.py  create_dataset.py  dataset.py  loader.py  train.py
