[metadata]
name = breath_modeling
version = 0.1.0
description = Breath Pattern Modelling and Pattern Recognition for health anomaly detection
author = Ramin Leon Neymeyer, Anton Valentin Dilg, Ramon Rennert
license = MIT

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src